# STForensicMacOS

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  main.py  project_details.json  pyproject.toml  requirements.txt  roadmap.md  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py
src/core/: __init__.py  config.py  forensic_engine.py  logger.py
src/modules/: __init__.py  base_module.py  filesystem.py  logs.py  memory.py  network.py  processes.py  system_info.py  timeline.py  users.py
src/reporters/: __init__.py  html_reporter.py  json_reporter.py
src/utils/: __init__.py  helpers.py
